--- a/Assets/HotUpdate/HotUpdate.asmdef
+++ b/Assets/HotUpdate/HotUpdate.asmdef
@@ -1,14 +1,3 @@
 {
-    "name": "HotUpdate",
-    "rootNamespace": "",
-    "references": [],
-    "includePlatforms": [],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+	"name": "HotUpdate"
 }
